# sr25519-donna

./: CMakeLists.txt
include/: sr25519-randombytes-default.h  sr25519.h
src/: core.h  ristretto255.c  ristretto255.h  sha3.c  sha3.h  sha3_256.c  sha3_512.c  sr25519-hash.h  sr25519-randombytes-default.c
src/ed25519-donna/: modm-donna-32bit.h  modm-donna-64bit.h
tests/: test_check.c
